fixed error in docker file

--- a/containers/lab01/frontend/Dockerfile
+++ b/containers/lab01/frontend/Dockerfile
@@ -17,6 +17,6 @@ RUN go get && go install
 FROM golang as runner
 
 WORKDIR $GOPATH/bin/
-COPY --from builder /go/bin/gowebapp .
+COPY --from=builder /go/bin/gowebapp .
 
 ENTRYPOINT /go/bin/gowebapp
