--- a/containers/lab01/frontend/Dockerfile
+++ b/containers/lab01/frontend/Dockerfile
@@ -19,4 +19,4 @@ FROM golang as runner
 WORKDIR $GOPATH/bin/
 COPY --from=builder /go/bin/gowebapp .
 
-ENTRYPOINT /go/bin/gowebapp
+ENTRYPOINT ["/go/bin/gowebapp"]
