forgot to untar the code

--- a/containers/lab01/backend/Dockerfile
+++ b/containers/lab01/backend/Dockerfile
@@ -2,6 +2,7 @@ FROM busybox as builder
 
 WORKDIR /tmp/
 ADD https://s3-us-west-2.amazonaws.com/heptio-training/k8shandson/files/gowebapp.tar .
+RUN tar -zxf gowebapp.tar
 
 FROM mysql:5.6
 LABEL maintainer "education@heptio.com"
