removed builder from webapp

--- a/containers/lab01/frontend/Dockerfile
+++ b/containers/lab01/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang as builder
+FROM golang
 LABEL maintainer "education@heptio.com"
 
 EXPOSE 80
@@ -13,10 +13,9 @@ RUN mv /tmp/gowebapp/gowebapp/code $GOPATH/src/gowebapp
 WORKDIR $GOPATH/src/gowebapp
 RUN go get && go install
 
+# FROM golang as runner
 
-FROM golang as runner
-
-WORKDIR $GOPATH/bin/
-COPY --from=builder /go/bin/gowebapp .
+# WORKDIR $GOPATH/bin/
+# COPY --from=builder /go/bin/gowebapp .
 
 ENTRYPOINT ["/go/bin/gowebapp"]
