moved config file to /tmp/config for webapp added run script

--- a/containers/lab01/frontend/Dockerfile
+++ b/containers/lab01/frontend/Dockerfile
@@ -13,9 +13,15 @@ RUN mv /tmp/gowebapp/gowebapp/code $GOPATH/src/gowebapp
 WORKDIR $GOPATH/src/gowebapp
 RUN go get && go install
 
-# FROM golang as runner
+FROM golang as runner
 
-# WORKDIR $GOPATH/bin/
-# COPY --from=builder /go/bin/gowebapp .
+COPY --from=builder \
+        /go/bin/gowebapp \
+        /go/bin/gowebapp
+
+WORKDIR /tmp/config
+COPY --from=builder \
+        /go/src/gowebapp/gowebapp/code/config/config.json
+        /tmp/config/config.json
 
 ENTRYPOINT ["/go/bin/gowebapp"]
