--- a/containers/lab01/frontend/Dockerfile
+++ b/containers/lab01/frontend/Dockerfile
@@ -21,7 +21,7 @@ COPY --from=builder \
 
 WORKDIR /tmp/config
 COPY --from=builder \
-        /go/src/gowebapp/gowebapp/code/config/config.json
+        /go/src/gowebapp/gowebapp/code/config/config.json \
         /tmp/config/config.json
 
 ENTRYPOINT ["/go/bin/gowebapp"]
