--- a/containers/lab01/frontend/Dockerfile
+++ b/containers/lab01/frontend/Dockerfile
@@ -24,4 +24,4 @@ COPY --from=builder \
         /tmp/config/config.json
 
 WORKDIR /tmp/config
-ENTRYPOINT ["./go/bin/gowebapp"]
+ENTRYPOINT ["/go/bin/gowebapp"]
