moved the webapp binary

--- a/containers/lab01/frontend/Dockerfile
+++ b/containers/lab01/frontend/Dockerfile
@@ -17,11 +17,11 @@ FROM golang as runner
 
 COPY --from=builder \
         /go/bin/gowebapp \
-        /go/bin/gowebapp
+        /tmp/gowebapp
 
 COPY --from=builder \
         $GOPATH/src/gowebapp/config/config.json \
         /tmp/config/config.json
 
 WORKDIR /tmp/config
-ENTRYPOINT ["/go/bin/gowebapp"]
+ENTRYPOINT ["/tmp/gowebapp"]
