fixed where code stuff was found

--- a/containers/lab01/frontend/Dockerfile
+++ b/containers/lab01/frontend/Dockerfile
@@ -16,20 +16,20 @@ RUN go get && go install
 FROM golang as runner
 
 COPY --from=builder \
-        /go/bin/gowebapp \
-        /tmp/site/gowebapp
+        $GOPATH/bin/gowebapp \
+        $GOPATH/bin/gowebapp
 
 COPY --from=builder \
-        $GOPATH/src/gowebapp/config/ \
+        $GOPATH/src/gowebapp/code/config \
         /tmp/site/config
 
 COPY --from=builder \
-        $GOPATH/src/gowebapp/static/ \
+        $GOPATH/src/gowebapp/code/static \
         /tmp/site/static
 
 COPY --from=builder \
-        $GOPATH/src/gowebapp/template/ \
+        $GOPATH/src/gowebapp/code/template \
         /tmp/site/template
 
 WORKDIR /tmp/site/
-ENTRYPOINT ["/tmp/site/gowebapp"]
+ENTRYPOINT ["$GOPATH/bin/gowebapp"]
