added patch, added config with var

--- a/containers/lab03/frontend.yml
+++ b/containers/lab03/frontend.yml
@@ -38,15 +38,23 @@ spec:
         tier: frontend
     spec:
       containers:
-      - name: gowebapp
-        env:
-        - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: dbpass
-              key: dbpass          
-        image: localhost:5000/gowebapp:v1      
-        ports:
-          - name: webout
-            containerPort: 80
-            protocol: TCP
+        - name: gowebapp
+          env:
+          - name: DB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: dbpass
+                key: dbpass
+          image: localhost:5000/gowebapp:v2
+          volumeMounts:
+            mountPaht: "/tmp/site/config"
+            subPath: "config.json"
+            name: "frontend-config"
+          ports:
+            - name: webout
+              containerPort: 80
+              protocol: TCP
+      volumes:
+        - name: "frontend-config"
+          configMap:
+            name: "frontend-config"
