volmount is a list

--- a/containers/lab03/frontend.yml
+++ b/containers/lab03/frontend.yml
@@ -47,9 +47,9 @@ spec:
                 key: dbpass
           image: localhost:5000/gowebapp:v2
           volumeMounts:
-            mountPaht: "/tmp/site/config"
-            subPath: "config.json"
-            name: "frontend-config"
+            - mountPaht: "/tmp/site/config"
+              subPath: "config.json"
+              name: "frontend-config"
           ports:
             - name: webout
               containerPort: 80
