--- a/containers/lab03/frontend.yml
+++ b/containers/lab03/frontend.yml
@@ -47,8 +47,7 @@ spec:
                 key: dbpass
           image: localhost:5000/gowebapp:v2
           volumeMounts:
-            - mountPath: "/tmp/site/config/"
-              subPath: "config.json"
+            - mountPath: "/tmp/site/config/config.json"
               name: "frontend-config"
           ports:
             - name: webout
